<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="pref_options"
        app:icon="@drawable/baseline_app_blocking_24"
        app:title="@string/pref_options"
        app:summary="@string/pref_warn_read_only"/>
    <Preference
        android:key="app_settings"
        app:icon="@drawable/baseline_app_settings_alt_24"
        app:title="@string/title_activity_settings"
        app:summary="@string/pref_summary_app_options"/>
    <Preference
        android:key="printer"
        app:icon="@drawable/baseline_print_24"
        app:title="@string/title_printer_settings"
        app:summary="@string/pref_summary_printer_settings"/>

</PreferenceScreen>