<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="90"
        android:title="@string/search_hint"
        android:icon="@drawable/baseline_search_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/periodToday"
        android:orderInCategory="100"
        android:title="@string/today"
        app:showAsAction="never"/>
    <item
        android:id="@+id/periodYesterday"
        android:orderInCategory="200"
        android:title="@string/yesterday"
        app:showAsAction="never"/>
    <item
        android:id="@+id/periodChoose"
        android:orderInCategory="300"
        android:title="@string/choose_date"
        app:showAsAction="never"/>
    <item
        android:id="@+id/periodNoLimits"
        android:orderInCategory="400"
        android:title="@string/no_limits"
        app:showAsAction="never"/>
</menu>