<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="10"
        android:title="@string/search_hint"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search_white_24dp"/>
    <item
        android:id="@+id/select_price_type"
        android:orderInCategory="20"
        android:title="@string/price_type"
        app:showAsAction="never"/>
    <item
        android:id="@+id/show_rests"
        android:orderInCategory="30"
        android:title="@string/rests_only"
        app:showAsAction="never"
        android:checkable="true"/>
    <item
        android:id="@+id/sorting"
        android:orderInCategory="40"
        android:title="@string/action_sort_by_name"
        app:showAsAction="never"
        android:checkable="true"/>
</menu>