<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/rotate"
        android:orderInCategory="20"
        android:title="@string/rotate"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_rotate_right_24"/>
    <item
        android:id="@+id/change_description"
        android:orderInCategory="30"
        android:title="@string/change_description"
        app:showAsAction="never"
        android:src="@drawable/baseline_check_box_24"/>
    <item
        android:id="@+id/set_default"
        android:orderInCategory="40"
        android:title="@string/set_default"
        app:showAsAction="never"
        android:icon="@drawable/baseline_edit_24"/>
    <item
        android:id="@+id/delete"
        android:orderInCategory="50"
        android:title="@string/delete"
        app:showAsAction="never"
        android:icon="@drawable/baseline_delete_forever_24"/>

</menu>