<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/save_document"
        android:orderInCategory="10"
        android:title="@string/save"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_save_24"/>
    <item
        android:id="@+id/edit_document"
        android:orderInCategory="20"
        android:title="@string/edit_order"
        app:showAsAction="never"
        android:icon="@drawable/baseline_edit_24"/>
    <item
        android:id="@+id/delete_document"
        android:orderInCategory="30"
        android:title="@string/delete_order"
        app:showAsAction="never"
        android:icon="@drawable/baseline_delete_forever_24"/>

</menu>