<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sync"
        android:orderInCategory="10"
        android:title="@string/action_sync"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_sync_24"/>
    <item
        android:id="@+id/account_settings"
        android:orderInCategory="20"
        android:title="@string/open_account_settings"
        app:showAsAction="never"
        android:icon="@drawable/baseline_account_box_24"/>
    <item
        android:id="@+id/event_log"
        android:orderInCategory="30"
        android:title="@string/events_log"
        app:showAsAction="never"
        android:icon="@drawable/baseline_device_unknown_24"/>
</menu>